# 7-llm-driven-data-engineering

./: .gitignore  Copy_of_pandas.ipynb  Ollama_Setup.ipynb  README.md  pyproject.toml
people-and-planet-ai/geospatial-classification/: README.ipynb
src/: generate_dag_script.py  generate_documentation_script.py  generate_sql_script.py
