[project]
name = "llm-driven-data-engineering"
version = "0.1.0"
description = "LLM-driven Data Engineering by Zach Wilson"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "pandas",
    "bardapi",
    "langchain",
    "langchain_experimental",
    "psycopg2",
    "google-auth-oauthlib",
    "google-api-python-client",
]
